[package]
name = "rpg"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
show-collide = []
show-culling = []

[dependencies]
hecs = { git = "https://github.com/Ralith/hecs", features = [ "macros" ] }
macroquad = { git = "https://github.com/not-fl3/macroquad", features = ["log-impl"] }
megaui-macroquad =  { git = "https://github.com/not-fl3/megaui-macroquad" }
fxhash = "0.2.1"
smallvec = "1.4.2"
miniserde = "0.1.13"
static_type_map = "0.1.2"

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad", features = ["log-impl"] }
megaui = { path = "../megaui" }
